donation app code added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -59,6 +59,9 @@
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin
     />
+
+    <script src="donationapp.js"></script>
+
     
     <script>var Alert = ReactBootstrap.Alert;</script>
 
