--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- favicon -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       
